--- a/VehicleManagementSystem/Views/Vehicle/VehicleDetails.cshtml
+++ b/VehicleManagementSystem/Views/Vehicle/VehicleDetails.cshtml
@@ -32,7 +32,11 @@
                                 <h6 class="text-uppercase">@item.color</h6>
                                 <h6 class="">Avability :</h6>
                                 <h6 class="">@item.isAvailable</h6>
-                            </div>
+                                @foreach (var item2 in @item.Components)
+                                {
+                                    <p> des : @item2.ComponentName + @item2.Manufacture </p>
+                                }
+                                </div>
                             <!--Second Flex Child-->
                             <h5 class="car-value align-self-center py-3 px-3" style="display:flex ;  justify-content:right;">
                                  <span class="car-price"><b> £ @item.price</b></span>
