--- a/VehicleManagementSystem/Views/Vehicle/Edit.cshtml
+++ b/VehicleManagementSystem/Views/Vehicle/Edit.cshtml
@@ -15,10 +15,9 @@
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-        
+
     <div class="form-horizontal">
-        <h4>   @Html.L
-            abelFor(model => model.vehicleType)</h4>
+        <h4>   @Html.LabelFor(model => model.vehicleType);</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.VehicleGUID)
