--- a/VehicleManagementSystem/Views/User/Products.cshtml
+++ b/VehicleManagementSystem/Views/User/Products.cshtml
@@ -4,55 +4,66 @@
 }
 
 <body class="userPage" style="background-image: url('../Content/Images/wallpaper.jpeg');">
-    <br/>
-    <section class="userPage">
-        <div class="container">
-            <label style="color:white;">Search :</label>
-            @using (Html.BeginForm("Products", "User", FormMethod.Post))
-            {
-                @Html.TextBox("searchForType");
-                <input type="submit" value="submit" />
-            }
-            <div class="row">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12" style="">
+                @using (Html.BeginForm("Products", "User", FormMethod.Post))
+                {<h4 style="color:white; "> Search by type of Vehicle :</h4>
+                
+                    @Html.TextBox("searchForType", null, new { @class = "form-control", @style = "width:20%; display:inline;" })
+                    <button type="submit" value="submit" class="btn btn-primary d-inline  p-2"> Search </button>
 
 
-                @foreach (var item in Model)
-                {<div class="col-lg-2" style="margin: 8%;">
-
-                        <div class="card userPage">
-                            <div class="content userPage">
-                                <div class="imgBx userPage">
-                                    <img src="~/Content/Images/wallpaper.jpeg">
-                                </div>
-                                <div class="contentBx userPage">
-                                    <h3> @item.VehicleBrand <br><span> @item.model</span></h3>
-                                    <span class="car-price" style="color:white"><b> £ @item.price</b></span>
-                                </div>
-                            </div>
-                            <ul class="sci userPage">
-                                <li>
-                                    <a href="">happy</a>
-                                </li>
-                                <li>
-                                    <a href="">birth</a>
-                                </li>
-                                <li>
-                                    <a href="">day</a>
-                                </li>
-                            </ul>
-                        </div>
-
-                    </div>
                 }
-
             </div>
-
         </div>
 
+        <div class="row">
 
+            <div class="col-lg-2" style="color:white ; ">
+                <h5>options</h5>
+                <h5>options</h5>
+                <h5>options</h5>
+                <h1>options</h1>
+            </div>
+                @foreach (var item in Model)
+                {<div class="col-lg-2" style="margin:5%;">
 
+    <div class="card userPage">
+        <div class="content userPage">
+            <div class="imgBx userPage">
+                <img src="~/Content/Images/wallpaper.jpeg">
+            </div>
+            <div class="contentBx userPage">
+                <h3> @item.VehicleBrand <br><span> @item.model</span></h3>
+                <span class="car-price" style="color:white"><b> £ @item.price</b></span>
+            </div>
+        </div>
+        <ul class="sci userPage">
+            <li>
+                <a href="">happy</a>
+            </li>
+            <li>
+                <a href="">birth</a>
+            </li>
+            <li>
+                <a href="">day</a>
+            </li>
+        </ul>
+    </div>
+</div>
 
+                        }
+                    </div>
+        
+       
+    </div>
 
+    <br/>
+    <section class="userPage">
+   
+      
     </section>
 </body>
 
@@ -61,13 +72,10 @@
 
 
     .userPage body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap;
+        display: block;
         /*background: #161616;*/
         min-height: 100vh;
-        color: white;
+        
     }
 
     .userPage section::before {
@@ -95,11 +103,9 @@
     .userPage .container {
         position: relative;
         z-index: 1;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap;
-        margin: 40px 0;
+        
+    
+    
     }
 
         .userPage .container .card {
