--- a/VehicleManagementSystem/Views/User/Products.cshtml
+++ b/VehicleManagementSystem/Views/User/Products.cshtml
@@ -21,7 +21,7 @@
 
         <div class="row">
 
-            <div class="col-lg-2" style="color:white ; ">
+            <div class="col-lg-2" style="color: white; -webkit-text-stroke-width: 1px; -webkit-text-stroke-color: whitesmoke; ">
                 <h5>options</h5>
                 <h5>options</h5>
                 <h5>options</h5>
