--- a/VehicleManagementSystem/Views/Shared/_Layout.cshtml
+++ b/VehicleManagementSystem/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Discover", "VehicleDetails", "Vehicle")</li>
+                    <li>@Html.ActionLink("Discover", "Products", "User")</li>
                     <li>@Html.ActionLink("Buy Now", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
