--- a/VehicleManagementSystem/Views/User/Products.cshtml
+++ b/VehicleManagementSystem/Views/User/Products.cshtml
@@ -5,66 +5,114 @@
 
 <body class="userPage" style="background-image: url('../Content/Images/wallpaper.jpeg');">
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-12" style="">
+            <div class="col-lg-12" style="z-index:1;">
                 @using (Html.BeginForm("Products", "User", FormMethod.Post))
                 {<h4 style="color:white; "> Search by type of Vehicle :</h4>
-                
+
                     @Html.TextBox("searchForType", null, new { @class = "form-control", @style = "width:20%; display:inline;" })
                     <button type="submit" value="submit" class="btn btn-primary d-inline  p-2"> Search </button>
-
-
                 }
             </div>
         </div>
-
+        
         <div class="row">
+            @using (Html.BeginForm("Products", "User", FormMethod.Post))
+            {
+                <div class="col-lg-2 col-md-2 filtersClass" style=" z-index:1;">
 
-            <div class="col-lg-2" style="color: white; -webkit-text-stroke-width: 1px; -webkit-text-stroke-color: whitesmoke; ">
-                <h5>options</h5>
-                <h5>options</h5>
-                <h5>options</h5>
-                <h1>options</h1>
-            </div>
-                @foreach (var item in Model)
-                {<div class="col-lg-2" style="margin:5%;">
+                    <div data-role="page">
 
-    <div class="card userPage">
-        <div class="content userPage">
-            <div class="imgBx userPage">
-                <img src="~/Content/Images/wallpaper.jpeg">
-            </div>
-            <div class="contentBx userPage">
-                <h3> @item.VehicleBrand <br><span> @item.model</span></h3>
-                <span class="car-price" style="color:white"><b> £ @item.price</b></span>
-            </div>
-        </div>
-        <ul class="sci userPage">
-            <li>
-                <a href="">happy</a>
-            </li>
-            <li>
-                <a href="">birth</a>
-            </li>
-            <li>
-                <a href="">day</a>
-            </li>
-        </ul>
-    </div>
-</div>
+                        <div class="wrapper center-block hidden-xs">
+                            <div class="filters-text">
+                                <h4 class="filter-span" style="color:whitesmoke;">
+                                    Filters
+                                    <small>(find product using filters below)</small>
+                                </h4>
+                                <span style="float:right;"><i class="fa fa-filter"></i></span>
+                            </div>
+                            <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                                <div class="panel panel-default">
+                                    <div class="panel-heading" role="tab" id="heading1">
+                                        <h4 class="panel-title"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse1" aria-expanded="false" aria-controls="collapse1"> Type </a> </h4>
+                                    </div>
+                                    <div id="collapse1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading1">
+                                        <div class="panel-body">
+                                            <div class="checkbox"> <label> <input type="radio" class="option-input checkbox" name="filter[1]" value="car" /> <span class="ml-10">Car</span> </label> </div>
+                                            <div class="checkbox"> <label> <input type="radio" class="option-input checkbox" name="filter[1]" value="bus" /> <span class="ml-10">bus</span> </label> </div>
+                                            <div class="checkbox"> <label> <input type="radio" class="option-input checkbox" name="filter[1]" value="bike" /> <span class="ml-10">bike</span> </label> </div>
 
-                        }
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="panel panel-default">
+                                    <div class="panel-heading" role="tab" id="heading2">
+                                        <h4 class="panel-title"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse2" aria-expanded="false" aria-controls="collapse2"> Brand </a> </h4>
+                                    </div>
+                                    <div id="collapse2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading2">
+                                        <div class="panel-body">
+                                            <div class="checkbox"> <label> <input type="radio" class="option-input checkbox" name="filter[2]" value="bmw" /> <span class="ml-10">bmw</span> </label> </div>
+                                            <div class="checkbox"> <label> <input type="radio" class="option-input checkbox" name="filter[2]" value="mercedes" /> <span class="ml-10">mercedes</span> </label> </div>
+                                            <div class="checkbox"> <label> <input type="radio" class="option-input checkbox" name="filter[2]" value="hyndai" /> <span class="ml-10">hyndai</span> </label> </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="panel panel-default">
+                                    <div class="panel-heading" role="tab" id="heading4">
+                                        <h4 class="panel-title"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse4" aria-expanded="false" aria-controls="collapse4"> Price </a> </h4>
+                                    </div>
+                                    <div id="collapse4" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading4">
+                                        <div class="panel-body">
+                                            <div class="checkbox"> <label> <input type="radio" class="option-input checkbox" name="filter[3]" value="1000000" /> <span class="ml-10">'less than'1,000,000</span> </label> </div>
+                                            <div class="checkbox"> <label> <input type="radio" class="option-input checkbox" name="filter[3]" value="500000" /> <span class="ml-10">'less than'500,000</span> </label> </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="text-right refine">
+                                <button class="btn btn-out btn-primary btn-square" id="button-filter" value="submit" type="submit">Refine Search</button>
+                            </div>
+                        </div>     
+                          
+          
+
                     </div>
+                </div>
+            }
+                @foreach (var item in Model)
+                {<div class="col-lg-3 col-md-3" style="margin:1%;">
+
+                        <div class="card userPage">
+                            <div class="content userPage">
+                                <div class="imgBx userPage">
+                                    <img src="~/Content/Images/wallpaper.jpeg">
+                                </div>
+                                <div class="contentBx userPage">
+                                    <h3> @item.VehicleBrand <br><span> @item.model</span></h3>
+                                    <span class="car-price" style="color:white"><b> £ @item.price</b></span>
+                                </div>
+                            </div>
+                            <ul class="sci userPage">
+                                <li>
+                                    <a href="">happy</a>
+                                </li>
+                               
+                               
+                            </ul>
+                        </div>
+                    </div>
+
+                }
+            </div>
         
        
     </div>
 
     <br/>
-    <section class="userPage">
    
-      
-    </section>
 </body>
 
 
@@ -110,8 +158,8 @@
 
         .userPage .container .card {
             position: relative;
-            width: 300px;
-            height: 400px;
+            width: 200px;
+            height: 300px;
             background: rgba(255, 255, 255, 0.05);
        
             
@@ -138,8 +186,8 @@
 
             .userPage .container .card .content .imgBx {
                 position: relative;
-                width: 150px;
-                height: 150px;
+                width: 100px;
+                height: 100px;
                 overflow: hidden;
             }
 
