--- a/VehicleManagementSystem/Views/Vehicle/ChooseVehicleType.cshtml
+++ b/VehicleManagementSystem/Views/Vehicle/ChooseVehicleType.cshtml
@@ -6,11 +6,11 @@
 <div style=" display: block; vertical-align: middle;  ">
     <h1>@ViewBag.Title</h1>
 </div>
-<div class="container-fluid " style=" display: block; vertical-align: middle;  ">
+<div class="container-fluid " style=" display: inline-block; vertical-align: middle; ">
     <div class="row" style=" display: inline-block; vertical-align: middle;  ">
 
         <!-- for cars  -->
-        <div class="card col-lg-4 " style="  width: 18rem; background-color: #DCDCDC; margin-right: 10px;">
+        <div class="card col-lg-4 " style="width: 18rem; background-color: #DCDCDC; margin-right: 10px;">
             <img src="~/Content/Images/cars.jpg" class="card-img-top" style="width:100%; height:60%;" alt="...">
             <div class="card-body" style="margin: auto; text-align: center ">
                 <h3 id="Car" class="card-title"><b>  Car   </b></h3>
@@ -36,9 +36,11 @@
 
             </div>
         </div>
+    </div>
+    <div class="row" style=" display: inline-block; vertical-align: middle;  ">
 
         <!-- for bikes  -->
-        <div class="card col-lg-4" style="width: 18rem ; background-color: #DCDCDC ;">
+        <div class="card col-lg-4" style="width: 18rem; background-color: #DCDCDC; ">
             <img src="~/Content/Images/cars.jpg" class="card-img-top" style="width:100%; height:60%;" alt="...">
             <div class="card-body" style="margin: auto; text-align: center ">
                 <h3 id="Car" class="card-title"><b>  Bike   </b></h3>
