--- a/VehicleManagementSystem/Views/User/OneVehicleDetails.cshtml
+++ b/VehicleManagementSystem/Views/User/OneVehicleDetails.cshtml
@@ -26,18 +26,37 @@
                         @foreach (var item in @Model.Components)
                         {
 
-                            <p class="lead" style="font-size:24px;">Desription:  </p> 
+                            <p class="lead" style="font-size:24px;">Desription:  </p>
                             <p style="font-size:18px;"> * @item.ComponentName</p>
                             <p style="font-size:18px;">@item.Manufacture</p>
                         }
 
 
-                        <div class="d-flex">
+                        <div class="d-flex" style="display:inline-block;">
                             <button class="btn btn-outline-dark flex-shrink-0" type="button">
                                 <i class="bi-cart-fill me-1"></i>
                                 Add to favourites
                             </button>
                         </div>
+                        @if(@Model.isAvailable==true)
+                        {
+                        <div class="d-flex" style="display:inline-block;">
+                            <button class="btn btn-outline-dark btn btn-primary flex-shrink-0" type="button" data-toggle="tooltip" title="Buy now" onclick="location.href='@Url.Action("Buy", "User")'" >
+                                <i class="bi-cart-fill me-1"></i>
+                                Buy Now
+                            </button>
+                        </div>
+                        }
+                        @if(@Model.isAvailable==false)
+                        {
+                        <div class="d-flex" style="display:inline-block;">
+                            <button class="btn-outline-dark btn btn-warning flex-shrink-0" type="button" data-toggle="tooltip" title="This @Model.vehicleType isnot availble for buying at the moment ">
+                                <i class="bi-cart-fill me-1"></i>
+                               not availble
+                            </button>
+                        </div>
+                        }
+
                     </div>
                 </div>
             </div>
