--- a/VehicleManagementSystem/Views/Home/Index.cshtml
+++ b/VehicleManagementSystem/Views/Home/Index.cshtml
@@ -10,6 +10,5 @@
     <img class="img-fluid img-rounded" style="height:80%; width:100%;" src="~/Content/Images/cover.jpg" />
 
     <p class="lead fw-normal text-white-50 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit!</p>
-    <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a
-    <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
+    <a class="btn btn-primary btn-lg px-4 me-sm-3" onclick="location.href='@Url.Action("Products", "User")'"">Get Started</a>
 </div>
