--- a/VehicleManagementSystem/Views/User/Buy.cshtml
+++ b/VehicleManagementSystem/Views/User/Buy.cshtml
@@ -1,11 +1,23 @@
-﻿
+﻿@model  VehicleManagementSystem.Models.Vehicles
 
 
+@{
+    ViewBag.title = "Buy successfully done .";
+}
+
+
+<h2> @ViewBag.title </h2>
+<hr />
 <div class="container-fluid">
 
-    <div class="row">
-        <div>
+    <div class="row" style=" align-content:center;">
+        <div style=" align-items:center; background-repeat:no-repeat ;width :700px; height:700px; background-image:url(../../Content/Images/thankYou.jpg);">
+            <div>
+                <h2 style="text-align:center">
+                    You will be contacted shortly .
 
+                </h2>
+            </div>
 
 
         </div>
