--- a/VehicleManagementSystem/Views/Vehicle/AddComponentsForVehicle.cshtml
+++ b/VehicleManagementSystem/Views/Vehicle/AddComponentsForVehicle.cshtml
@@ -1,4 +1,4 @@
-﻿@model   VehicleManagementSystem.Models.modelView
+﻿@model   VehicleManagementSystem.Models.modelViewVehicle
 
 @{
     ViewBag.title = "Add options for a vehicle";
