--- a/VehicleManagementSystem/Views/Vehicle/Edit.cshtml
+++ b/VehicleManagementSystem/Views/Vehicle/Edit.cshtml
@@ -12,7 +12,7 @@
     <title>Edit</title>
 </head>
 <body>
-    @using (Html.BeginForm())
+    @using (Html.BeginForm(new { VehicleGUID = @Model.VehicleGUID }))
     {
         @Html.AntiForgeryToken()
 
@@ -77,6 +77,13 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.vehicleType, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.vehicleType, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.speed1, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.speed1, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.speed1, "", new { @class = "text-danger" })
             </div>
         </div>
 
