--- a/VehicleManagementSystem/Views/Vehicle/VehicleDetails.cshtml
+++ b/VehicleManagementSystem/Views/Vehicle/VehicleDetails.cshtml
@@ -36,10 +36,15 @@
                                 {
                                     <p> des : @item2.ComponentName + @item2.Manufacture </p>
                                 }
-                                </div>
+                            </div>
+                            <!--Second Flex Child-->
+
+                            <h5 class="car-value align-self-center py-3 px-3" style="display:flex ;  justify-content:right;">
+                                <span class="car-price"><b>  @item.price</b></span>
+                            </h5>
                             <!--Second Flex Child-->
                             <h5 class="car-value align-self-center py-3 px-3" style="display:flex ;  justify-content:right;">
-                                 <span class="car-price"><b> £ @item.price</b></span>
+                                <span class="car-price"><b>  @item.speed1</b></span>
                             </h5>
 
                         </div>
