--- a/VehicleManagementSystem/Views/User/OneVehicleDetails.cshtml
+++ b/VehicleManagementSystem/Views/User/OneVehicleDetails.cshtml
@@ -10,7 +10,7 @@
         <section class=" col-lg-12 col-md-12 py-5 border ">
             <div class="container px-4 px-lg-5 my-5">
                 <div class="row gx-4 gx-lg-5 align-items-center">
-                    <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0 border border-dark" style="border: thin 1px black;" src="x" alt="..." /></div>
+                    <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0 border border-dark" style="border: thin 1px black;" src="~/Content/Images/cars.jpg" alt="..." /></div>
                     <div class="col-md-6">
                         <div class="small mb-1">@Model.vehicleType</div>
                         <h3 class="display-5 fw-bolder">@Model.VehicleBrand</h3>
