--- a/VehicleManagementSystem/Views/Vehicle/VehicleDetails.cshtml
+++ b/VehicleManagementSystem/Views/Vehicle/VehicleDetails.cshtml
@@ -32,6 +32,8 @@
                                 <h6 class="text-uppercase">@item.color</h6>
                                 <h6 class="">Avability :</h6>
                                 <h6 class="">@item.isAvailable</h6>
+                                <h6 class="">Speed :</h6>
+                                <h6 class="">@item.speed1</h6>
                                 @foreach (var item2 in @item.Components)
                                 {
                                     <p> des : @item2.ComponentName + @item2.Manufacture </p>
@@ -42,10 +44,7 @@
                             <h5 class="car-value align-self-center py-3 px-3" style="display:flex ;  justify-content:right;">
                                 <span class="car-price"><b>  @item.price</b></span>
                             </h5>
-                            <!--Second Flex Child-->
-                            <h5 class="car-value align-self-center py-3 px-3" style="display:flex ;  justify-content:right;">
-                                <span class="car-price"><b>  @item.speed1</b></span>
-                            </h5>
+                           
 
                         </div>
                     </div>
