--- a/VehicleManagementSystem/Views/Home/Index.cshtml
+++ b/VehicleManagementSystem/Views/Home/Index.cshtml
@@ -9,6 +9,8 @@
    
     <img class="img-fluid img-rounded" style="height:80%; width:100%;" src="~/Content/Images/cover.jpg" />
 
-    <p class="lead fw-normal text-white-50 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit!</p>
+    <p class="lead fw-normal text-white-50 mb-4">Our system keep track of the cars, buses and bikes of a specific company and their possible components 
+    (brand - model- engine- doors - glass - color- ...) 
+    Customers can see list of cars on it and buy from it or add to favourite list .</p>
     <a class="btn btn-primary btn-lg px-4 me-sm-3" onclick="location.href='@Url.Action("Products", "User")'"">Get Started</a>
 </div>
