--- a/VehicleManagementSystem/Views/Shared/_LoginPartial.cshtml
+++ b/VehicleManagementSystem/Views/Shared/_LoginPartial.cshtml
@@ -12,10 +12,12 @@
             <li>
                 @Html.ActionLink("Hello " + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
             </li>
-            if()
+            @if(Session["role"].ToString() != "client")
+            {
             <li>
                 @Html.ActionLink("Inventory", "Index", "Vehicle", routeValues: null, htmlAttributes: new { title = "Manage" })
             </li>
+            }
             <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
         </ul>
     }
