--- a/VehicleManagementSystem/Views/User/Products.cshtml
+++ b/VehicleManagementSystem/Views/User/Products.cshtml
@@ -48,7 +48,7 @@
 
                                 <div class="panel panel-default">
                                     <div class="panel-heading" role="tab" id="heading4">
-                                        <h4 class="panel-title"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse4" aria-expanded="false" aria-controls="collapse4"> Price </a> </h4>
+                                        <h4 class="panel-title"> <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse3" aria-expanded="false" aria-controls="collapse3"> Price </a> </h4>
                                     </div>
                                     <div id="collapse3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading4">
                                         <div class="panel-body">
@@ -116,7 +116,7 @@
                                                       <p style="display:inline-block"> £ </p>
     }@if (String.IsNullOrEmpty(ViewBag.TempLoc))
     {
-                                                      <p style="display:inline-block"> £ </p>
+                                                      <p style="display:inline-block"> LE </p>
     }
 
     @item.price
