--- a/VehicleManagementSystem/Views/User/Products.cshtml
+++ b/VehicleManagementSystem/Views/User/Products.cshtml
@@ -116,7 +116,7 @@
                                                       <p style="display:inline-block"> £ </p>
     }@if (String.IsNullOrEmpty(ViewBag.TempLoc))
     {
-                                                      <p style="display:inline-block"> LE </p>
+                                                      <p style="display:inline-block">  £ </p>
     }
 
     @item.price
